if CI_BUILD true environment $TRAVIS_TAG(via travis and tagged commits) will be set, and will use $TRAVIS_TAG instead of CPACK_PACKAGE_VERSION strings simplify version string to be based on tag when available otherwise use version string

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,18 @@ execute_process(
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
+option (CI_BUILD false)
+
 set (CPACK_PACKAGE_VERSION_MAJOR "20")
 set (CPACK_PACKAGE_VERSION_MINOR "0")
 set (CPACK_PACKAGE_VERSION_PATCH "0")
 set (CPACK_PACKAGE_VENDOR "Nano Currency")
+
+if (CI_BUILD)
+	set (TAG_VERSION_STRING "$ENV{TRAVIS_TAG}")
+else()
+	set (TAG_VERSION_STRING "V${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
+endif()
 
 set (CMAKE_INSTALL_RPATH "@executable_path/../Frameworks")
 # Create all libraries and executables in the root binary dir
@@ -360,9 +368,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 
 	target_compile_definitions(qt
 		PRIVATE
-		-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
-		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
-		-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH}
+		-DTAG_VERSION_STRING=${TAG_VERSION_STRING}
 		-DGIT_COMMIT_HASH=${GIT_COMMIT_HASH})
 
 	if (WIN32)
