--- a/nano/nano_node/CMakeLists.txt
+++ b/nano/nano_node/CMakeLists.txt
@@ -14,9 +14,7 @@ target_link_libraries (nano_node
 
 target_compile_definitions(nano_node
 	PRIVATE
-		-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
-		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
-		-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH}
+		-DTAG_VERSION_STRING=${TAG_VERSION_STRING}
 		-DGIT_COMMIT_HASH=${GIT_COMMIT_HASH}
 		-DBOOST_PROCESS_SUPPORTED=${BOOST_PROCESS_SUPPORTED})
 
