Squashed commit of the following:
commit 91e8acf57198b08f06a62a0f8ef6656cb5dc12d6
Merge: 295f8b5a 743e4ec6
Author: Guilherme Lawless <guilherme@nano.org>
Date:   Wed Aug 7 17:04:13 2019 +0100

    Merge branch 'travis/artifacts_to_s3' of https://github.com/argakiig/raiblocks into argakiig-travis/artifacts_to_s3

commit 743e4ec61e0ca842de9daf16068ff381f0f85252
Merge: d957509b 6567d436
Author: Russel Waters <russel@nano.org>
Date:   Wed Aug 7 11:24:33 2019 -0400

    Merge branch 'master' into travis/artifacts_to_s3

commit d957509b7a81807fd1eb941e9ce7c5438cc7ab39
Merge: 9a0d5a93 92dc37c4
Author: Russel Waters <russel@nano.org>
Date:   Wed Aug 7 10:06:04 2019 -0400

    Merge branch 'master' into travis/artifacts_to_s3

commit 9a0d5a93d3f1f817827c214cbc4d3d37b0048571
Author: Russel Waters <russel@nano.org>
Date:   Wed Aug 7 10:05:32 2019 -0400

    add TRAVIS_TAG and CI_BUILD to docker builds
    pass TRAVIS_TAG from travis through to docker build env

commit 8ea2c1181c693dfa3bf0092da1254d933439bb82
Author: Russel Waters <russel@nano.org>
Date:   Tue Aug 6 22:34:14 2019 -0400

    Travis capitalizes BUILD_STAGE_NAME

commit 5d069ce6280d8201d1cd45fbdaa7d33a4346139b
Author: Russel Waters <russel@nano.org>
Date:   Tue Aug 6 20:30:57 2019 -0400

    formatting

commit 43953f0fe3e63f0f4f059e0b723825973e93d881
Author: Russel Waters <russel@nano.org>
Date:   Tue Aug 6 19:55:48 2019 -0400

    if CI_BUILD true environment $TRAVIS_TAG(via travis and tagged commits) will be set, and will use $TRAVIS_TAG instead of CPACK_PACKAGE_VERSION strings
    simplify version string to be based on tag when available otherwise use version string

commit 13db5cbae7f47652f8aad3a32265658a0e4df4e4
Author: Russel Waters <russel@nano.org>
Date:   Tue Aug 6 15:08:56 2019 -0400

    split artifacts between beta and live
    build mac live always to catch new errors
    deploy live on tags not RC or DB
    build and deploy beta on tags RC or DB
    bundle QtDBus framework as required for plugin libq

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,20 @@ execute_process(
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
+option (CI_BUILD false)
+
 set (CPACK_PACKAGE_VERSION_MAJOR "20")
 set (CPACK_PACKAGE_VERSION_MINOR "0")
 set (CPACK_PACKAGE_VERSION_PATCH "0")
 set (CPACK_PACKAGE_VENDOR "Nano Currency")
 
-set(CMAKE_INSTALL_RPATH "@executable_path/../Frameworks")
+if (CI_BUILD)
+	set (TAG_VERSION_STRING "$ENV{TRAVIS_TAG}")
+else()
+	set (TAG_VERSION_STRING "V${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
+endif()
+
+set (CMAKE_INSTALL_RPATH "@executable_path/../Frameworks")
 # Create all libraries and executables in the root binary dir
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
@@ -360,9 +368,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 
 	target_compile_definitions(qt
 		PRIVATE
-		-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
-		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
-		-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH}
+		-DTAG_VERSION_STRING=${TAG_VERSION_STRING}
 		-DGIT_COMMIT_HASH=${GIT_COMMIT_HASH})
 
 	if (WIN32)
@@ -428,6 +434,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 	endif ()
 
 	if (APPLE)
+		set (CPACK_GENERATOR "DragNDrop")
 		CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/Info.plist.in ${CMAKE_SOURCE_DIR}/Info.plist @ONLY)
 		install (TARGETS nano_wallet DESTINATION Nano.app/Contents/MacOS)
 		install (TARGETS nano_node DESTINATION Nano.app/Contents/MacOS)
@@ -435,6 +442,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 		install (FILES Info.plist DESTINATION Nano.app/Contents)
 		install (FILES qt.conf DESTINATION Nano.app/Contents/Resources)
 		install (DIRECTORY ${Qt5_DIR}/../../QtCore.framework DESTINATION Nano.app/Contents/Frameworks)
+		install (DIRECTORY ${Qt5_DIR}/../../QtDBus.framework DESTINATION Nano.app/Contents/Frameworks)
 		install (DIRECTORY ${Qt5_DIR}/../../QtGui.framework DESTINATION Nano.app/Contents/Frameworks)
 		install (DIRECTORY ${Qt5_DIR}/../../QtPrintSupport.framework DESTINATION Nano.app/Contents/Frameworks)
 		install (DIRECTORY ${Qt5_DIR}/../../QtTest.framework DESTINATION Nano.app/Contents/Frameworks)
@@ -472,6 +480,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 		install (FILES ${Qt5_bin_DIR}/Qt5WinExtras.dll DESTINATION .)
 		install (FILES ${Qt5WindowsPlugin} DESTINATION platforms)
 	else ()
+		set(CPACK_GENERATOR "TBZ2")
 		install(TARGETS nano_wallet
 				RUNTIME DESTINATION .
 		)
