TOML config file support and migration

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,3 +15,6 @@
 	path = gtest
 	url = https://github.com/google/googletest.git
 	branch = v1.8.x
+[submodule "cpptoml"]
+	path = cpptoml
+	url = https://github.com/cryptocode/cpptoml.git
