Allow AVX2 builds for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ else ()
 	endif()
 
 	if (CMAKE_SYSTEM_PROCESSOR MATCHES "^(i.86|x86(_64)?)$")
-		if (NANO_SIMD_OPTIMIZATIONS OR RAIBLOCKS_SIMD_OPTIMIZATIONS)
+		if (NANO_SIMD_OPTIMIZATIONS OR RAIBLOCKS_SIMD_OPTIMIZATIONS OR ENABLE_AVX2)
 			add_compile_options(-msse4)
 			if (ENABLE_AES)
 				add_compile_options(-maes)
@@ -105,14 +105,6 @@ else ()
 							-DCRYPTOPP_DISABLE_AESNI)
 		endif()
 
-		if (ENABLE_AVX2)
-			add_compile_options(-mavx2 -mbmi -mbmi2 -maes)
-			if (PERMUTE_WITH_GATHER)
-				add_definitions(-DPERMUTE_WITH_GATHER)
-			elseif (PERMUTE_WITH_SHUFFLES)
-				add_definitions(-DPERMUTE_WITH_SHUFFLES)
-			endif()
-		endif()
 	elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
 		if (NANO_SIMD_OPTIMIZATIONS OR RAIBLOCKS_SIMD_OPTIMIZATIONS)
 			add_compile_options(-march=armv8-a+crc+crypto)
@@ -122,6 +114,19 @@ else ()
 		endif ()
 	endif()
 endif ()
+
+if (ENABLE_AVX2)
+	if (WIN32)
+		add_definitions(/arch:AVX2)
+	elseif (CMAKE_SYSTEM_PROCESSOR MATCHES "^(i.86|x86(_64)?)$")
+		add_compile_options(-mavx2 -mbmi -mbmi2 -maes)
+	endif()
+	if (PERMUTE_WITH_GATHER)
+		add_definitions(-DPERMUTE_WITH_GATHER)
+	elseif (PERMUTE_WITH_SHUFFLES)
+		add_definitions(-DPERMUTE_WITH_SHUFFLES)
+	endif()
+endif()
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
