--- a/nano/lib/CMakeLists.txt
+++ b/nano/lib/CMakeLists.txt
@@ -14,6 +14,8 @@ add_library (nano_lib
 	${platform_sources}
 	alarm.hpp
 	alarm.cpp
+	asio.hpp
+	asio.cpp
 	blockbuilders.hpp
 	blockbuilders.cpp
 	blocks.hpp
