--- a/nano/lib/CMakeLists.txt
+++ b/nano/lib/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library (nano_lib
 	blocks.cpp
 	config.hpp
 	config.cpp
+	configbase.hpp
 	errors.hpp
 	errors.cpp
 	ipc.hpp
@@ -39,8 +40,11 @@ add_library (nano_lib
 	stats.hpp
 	stats.cpp
 	timer.hpp
+	tomlconfig.hpp
 	utility.hpp
 	utility.cpp
+	walletconfig.hpp
+	walletconfig.cpp
 	work.hpp
 	work.cpp)
 
