Distributed work refactor
With a factory that also saves distributed work objects and a work cancel observer, work can now be properly cancelled to work peers

--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -37,6 +37,8 @@ add_library (node
 	daemonconfig.cpp
 	diagnosticsconfig.hpp
 	diagnosticsconfig.cpp
+	distributed_work.cpp
+	distributed_work.hpp
 	election.hpp
 	election.cpp
 	gap_cache.hpp
