Adds RocksDB support (#2197)
* Add RocksDB support

* Remove unused variable

* node.confirm_locked test is using the wrong store

* Fix Tests, ASAN issues and other improvements

* Delete column family after dropping it

* (Unrelated) Output to cerr if there is a problem reading genesis block

* Vacuum fails if the backup directory does not exist

* Copy WAL log files over when doing snapshot/vacuuming and open the database to explicitly flush them

* Don't atomic_flush yet since WAL are enabled by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,9 @@ set (NANO_SECURE_RPC OFF CACHE BOOL "")
 set (NANO_ROCKSDB OFF CACHE BOOL "")
 set (NANO_WARN_TO_ERR OFF CACHE BOOL "")
 
+if (NANO_ROCKSDB)
+	add_definitions (-DNANO_ROCKSDB=1)
+endif ()
 option(NANO_ASAN_INT "Enable ASan+UBSan+Integer overflow" OFF)
 option(NANO_ASAN "Enable ASan+UBSan" OFF)
 option(NANO_TSAN "Enable TSan" OFF)
