--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -1,8 +1,3 @@
-if (NANO_ROCKSDB)
-  set (rocksdb_test rocksdb_test.cpp)
-  set (rocksdb_libs ${ROCKSDB_LIBRARIES} ${ZLIB_LIBRARIES})
-endif ()
-
 add_executable (core_test
 	core_test_main.cc
 	testutil.hpp
@@ -23,7 +18,6 @@ add_executable (core_test
 	memory_pool.cpp
 	processor_service.cpp
 	peer_container.cpp
-	${rocksdb_test}
 	signing.cpp
 	socket.cpp
 	toml.cpp
@@ -41,4 +35,4 @@ target_compile_definitions(core_test
 			-DTAG_VERSION_STRING=${TAG_VERSION_STRING}
 			-DGIT_COMMIT_HASH=${GIT_COMMIT_HASH}
 			-DBOOST_PROCESS_SUPPORTED=${BOOST_PROCESS_SUPPORTED})
-target_link_libraries (core_test node secure gtest libminiupnpc-static Boost::boost ${rocksdb_libs})
+target_link_libraries (core_test node secure gtest libminiupnpc-static Boost::boost)
