--- a/nano/secure/CMakeLists.txt
+++ b/nano/secure/CMakeLists.txt
@@ -40,6 +40,8 @@ add_library (secure
 	blockstore.hpp
 	blockstore_partial.hpp
 	blockstore.cpp
+	epoch.cpp
+	epoch.hpp
 	ledger.hpp
 	ledger.cpp
 	utility.hpp
