Distributed work refactor (#2255)
* Distributed work refactor

With a factory that also saves distributed work objects and a work cancel observer, work can now be properly cancelled to work peers

* Cleanup the map itself, not only the vectors; use public class members

* Ability to force stop local generation

* Adding distributed_work tests

* Test for multiple requests

* Change to cleanup after adding a new work

* Extract prepared request method

* Merge if

* Finish up test

* Dont retry if stopped (cancelled)

* (unrelated) increasing deadline in a test

* Review items

* Another deadline fix

* Work can complete before the test

--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -37,6 +37,8 @@ add_library (node
 	confirmation_height_processor.cpp
 	daemonconfig.hpp
 	daemonconfig.cpp
+	distributed_work.hpp
+	distributed_work.cpp
 	election.hpp
 	election.cpp
 	gap_cache.hpp
