--- a/docker/ci/Dockerfile-gcc
+++ b/docker/ci/Dockerfile-gcc
@@ -2,6 +2,7 @@ FROM nanocurrency/nano-env:base
 
 RUN apt-get install -yqq git
 
+ENV USE_RTTI=1
 RUN git clone https://github.com/facebook/rocksdb.git && \
     cd rocksdb && \
     make static_lib && \
