Track length of time locks are held for

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,11 @@ set (NANO_TEST OFF CACHE BOOL "")
 set (NANO_SECURE_RPC OFF CACHE BOOL "")
 set (NANO_ROCKSDB OFF CACHE BOOL "")
 set (NANO_WARN_TO_ERR OFF CACHE BOOL "")
+set (NANO_TIMED_LOCKS 0 CACHE INTEGER "")
+
+if (${NANO_TIMED_LOCKS} GREATER 0)
+	add_definitions (-DNANO_TIMED_LOCKS=${NANO_TIMED_LOCKS})
+endif ()
 
 if (NANO_ROCKSDB)
 	add_definitions (-DNANO_ROCKSDB=1)
@@ -182,7 +187,12 @@ set(Boost_USE_MULTITHREADED      ON)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
 
-find_package (Boost 1.67.0 REQUIRED COMPONENTS filesystem log log_setup thread program_options system)
+if (${NANO_TIMED_LOCKS} GREATER 0)
+	set (timed_locks_boost_libs context fiber)
+endif ()
+
+find_package (Boost 1.67.0 REQUIRED COMPONENTS filesystem log log_setup thread program_options system ${timed_locks_boost_libs})
+
 if (NANO_ROCKSDB)
 	find_package (RocksDB REQUIRED)
 	find_package (ZLIB REQUIRED)
