add rocksdb to build artifacts lacking it

--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -7,7 +7,7 @@ ADD ./ /tmp/src
 
 RUN mkdir /tmp/build && \
     cd /tmp/build && \
-    cmake /tmp/src -DCI_BUILD=${CI_BUILD} -DBOOST_ROOT=${BOOST_ROOT} -DACTIVE_NETWORK=nano_${NETWORK}_network && \
+    cmake /tmp/src -DCI_BUILD=${CI_BUILD} -DBOOST_ROOT=${BOOST_ROOT} -DACTIVE_NETWORK=nano_${NETWORK}_network -DNANO_ROCKSDB=ON && \
     make nano_node -j $(nproc) && \
     make nano_rpc -j $(nproc) && \
     cd .. && \
