--- a/docker/ci/Dockerfile-clang
+++ b/docker/ci/Dockerfile-clang
@@ -6,7 +6,7 @@ RUN apt-get update -qq && apt-get install -yqq \
 ENV USE_RTTI=1
 RUN git clone https://github.com/facebook/rocksdb.git && \
     cd rocksdb && \
-    make static_lib && \
+    PORTABLE=1 make static_lib && \
     make install
 
 ENV CXX=/usr/bin/clang++
