--- a/docker/ci/Dockerfile-gcc
+++ b/docker/ci/Dockerfile-gcc
@@ -5,7 +5,7 @@ RUN apt-get install -yqq git
 ENV USE_RTTI=1
 RUN git clone https://github.com/facebook/rocksdb.git && \
     cd rocksdb && \
-    make static_lib && \
+    PORTABLE=1 make static_lib && \
     make install
 
 ENV BOOST_ROOT=/usr/local
