--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable (core_test
 	active_transactions.cpp
 	block.cpp
 	block_store.cpp
+	bootstrap.cpp
 	conflicts.cpp
 	difficulty.cpp
 	distributed_work.cpp
