Add ability to start pow server as child process

--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -90,6 +90,8 @@ add_library (node
 	payment_observer_processor.cpp
 	portmapping.hpp
 	portmapping.cpp
+	node_pow_server_config.hpp
+	node_pow_server_config.cpp
 	repcrawler.hpp
 	repcrawler.cpp
 	testing.hpp
