add nano-pow-server submodule add NANO_POW_SERVER defaulting to off that when enabled will build the nano-pow-server and include them with the artifact release bundle Update build artifacts use known paths to distribute module targets to work around limitations on cmake prior to 3.13 3.9.5 is included with build, this provides compatibility
rehome nano-pow-server module in the root project source updating install targets appropriately
on appveyor tag as NOT_ARTIFACT when building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set (NANO_GUI OFF CACHE BOOL "")
 set (NANO_TEST OFF CACHE BOOL "")
 set (NANO_SECURE_RPC OFF CACHE BOOL "")
 set (NANO_ROCKSDB OFF CACHE BOOL "")
+set (NANO_POW_SERVER OFF CACHE BOOL "")
 set (NANO_WARN_TO_ERR OFF CACHE BOOL "")
 set (NANO_TIMED_LOCKS 0 CACHE INTEGER "")
 
@@ -346,6 +347,10 @@ add_subdirectory(nano/nano_node)
 add_subdirectory(nano/rpc)
 add_subdirectory(nano/nano_rpc)
 
+if (NANO_POW_SERVER)
+	add_subdirectory(nano-pow-server)
+endif ()
+
 if (NANO_TEST OR RAIBLOCKS_TEST)
 	if(WIN32)
 		if(MSVC_VERSION)
@@ -473,6 +478,10 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 		install (DIRECTORY ${Qt5_DIR}/../../QtTest.framework DESTINATION Nano.app/Contents/Frameworks)
 		install (DIRECTORY ${Qt5_DIR}/../../QtWidgets.framework DESTINATION Nano.app/Contents/Frameworks)
 		install (FILES "${Qt5_DIR}/../../../plugins/platforms/libqcocoa.dylib" DESTINATION Nano.app/Contents/PlugIns/platforms)
+		if (NANO_POW_SERVER)
+			install (PROGRAMS ${PROJECT_BINARY_DIR}/nano_pow_server DESTINATION Nano.app/Contents/MacOS)
+			install (DIRECTORY ${PROJECT_SOURCE_DIR}/nano-pow-server/public DESTINATION Nano.app/Contents/MacOS)
+		endif()
 		install (FILES Nano.icns DESTINATION Nano.app/Contents/Resources)
 	elseif (WIN32)
 		if ("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
@@ -497,6 +506,10 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 		get_filename_component (Qt5_bin_DIR ${Qt5_DIR}/../../../bin ABSOLUTE)
 		install (TARGETS nano_wallet DESTINATION .)
 		install (TARGETS nano_wallet_com DESTINATION .)
+		if (NANO_POW_SERVER)
+			install (PROGRAMS ${PROJECT_BINARY_DIR}/nano_pow_server DESTINATION .)
+			install (DIRECTORY ${PROJECT_SOURCE_DIR}/nano-pow-server/public DESTINATION .)
+		endif ()
 		install (FILES ${CMAKE_CURRENT_BINARY_DIR}/${WIN_REDIST} DESTINATION .)
 		install (FILES ${Qt5_bin_DIR}/libGLESv2.dll DESTINATION .)
 		install (FILES ${Qt5_bin_DIR}/Qt5Core.dll DESTINATION .)
@@ -509,6 +522,10 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 		install(TARGETS nano_wallet
 				RUNTIME DESTINATION .
 		)
+		if (NANO_POW_SERVER)
+			install (PROGRAMS ${PROJECT_BINARY_DIR}/nano_pow_server DESTINATION .)
+			install (DIRECTORY ${PROJECT_SOURCE_DIR}/nano-pow-server/public DESTINATION .)
+		endif ()
 	endif ()
 endif ()
 
