--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "cpptoml"]
 	path = cpptoml
 	url = https://github.com/cryptocode/cpptoml.git
+[submodule "nano-pow-server"]
+	path = nano-pow-server
+	url = https://github.com/nanocurrency/nano-pow-server.git
