--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -7,15 +7,17 @@ ADD ./ /tmp/src
 
 RUN mkdir /tmp/build && \
     cd /tmp/build && \
-    cmake /tmp/src -DCI_BUILD=${CI_BUILD} -DBOOST_ROOT=${BOOST_ROOT} -DACTIVE_NETWORK=nano_${NETWORK}_network -DNANO_ROCKSDB=ON && \
+    cmake /tmp/src -DCI_BUILD=${CI_BUILD} -DBOOST_ROOT=${BOOST_ROOT} -DACTIVE_NETWORK=nano_${NETWORK}_network -DNANO_ROCKSDB=ON -DNANO_POW_SERVER=ON && \
     make nano_node -j $(nproc) && \
     make nano_rpc -j $(nproc) && \
+    make nano_pow_server -j $(nproc) && \
     cd .. && \
     echo ${NETWORK} > /etc/nano-network
 
 FROM ubuntu:16.04
 COPY --from=0 /tmp/build/nano_node /usr/bin
 COPY --from=0 /tmp/build/nano_rpc /usr/bin
+COPY --from=0 /tmp/build/nano_pow_server /usr/bin
 COPY --from=0 /etc/nano-network /etc
 COPY docker/node/entry.sh /entry.sh
 COPY docker/node/config /usr/share/nano/config
