--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ jobs:
       if: tag =~RC|DB
       script: 
         - if [ -n "$DOCKER_PASSWORD" ]; then TRAVIS_TAG="${TRAVIS_TAG}" ci/deploy-docker.sh; fi;
+
     - stage: tag_test
       name: "gcc"
       if: tag is present
@@ -39,7 +40,6 @@ jobs:
       before_install:
         - sudo mkdir -p /etc/docker && echo '{"ipv6":true,"fixed-cidr-v6":"2001:db8:1::/64"}' | sudo tee /etc/docker/daemon.json && sudo service docker restart;
         - ci/build-docker-image.sh docker/ci/Dockerfile-gcc nanocurrency/nano-env:gcc; 
-      
     - name: "clang"
       if: tag is present
       os: linux
@@ -49,7 +49,6 @@ jobs:
       before_install:
         - sudo mkdir -p /etc/docker && echo '{"ipv6":true,"fixed-cidr-v6":"2001:db8:1::/64"}' | sudo tee /etc/docker/daemon.json && sudo service docker restart;
         - ci/build-docker-image.sh docker/ci/Dockerfile-clang nanocurrency/nano-env:clang;
-      
     - name: "osx clang"
       if: tag is present
       os: osx
@@ -58,10 +57,10 @@ jobs:
         - RELEASE=1
       before_install:
         - brew update;
-        - brew install qt5;
         - brew cask install xquartz;
         - brew upgrade cmake;
         - brew install rocksdb;
+        - util/build_prep/macosx/build_qt.sh
       install:
         - brew install ccache;
         - export PATH="/usr/local/opt/ccache/libexec:$PATH";
@@ -94,13 +93,14 @@ jobs:
       compiler: clang
       before_install:
         - brew update;
-        - brew install qt5;
         - brew cask install xquartz;
         - brew upgrade cmake;
         - brew install rocksdb;
+        - util/build_prep/macosx/build_qt.sh
       install:
         - brew install ccache;
         - export PATH="/usr/local/opt/ccache/libexec:$PATH";
+
     - stage: artifacts_live
       name: "live docker"
       if: tag IS present AND !tag=~RC|DB
@@ -128,15 +128,16 @@ jobs:
         - brew cask install xquartz;
         - brew upgrade cmake;
         - brew install rocksdb;
+        - util/build_prep/macosx/build_qt.sh
       install:
         - pip install --user awscli
         - brew install ccache;
         - export PATH="$HOME/Library/Python/2.7/bin:/usr/local/opt/ccache/libexec:$PATH";
         - aws --version
-        - util/build_prep/macosx/build_qt.sh
       script:
         - ci/build-deploy.sh "/tmp/qt/lib/cmake/Qt5"; 
         - if [[ -n "$TRAVIS_TAG" ]]; then if [[ ! "${TRAVIS_TAG-0}" =~ ("RC"|"DB") ]]; then ci/deploy-travis.sh; fi; fi;
+
     - stage: artifacts_beta
       name: "beta docker"
       if: tag =~RC|DB
@@ -169,12 +170,12 @@ jobs:
         - brew cask install xquartz;
         - brew upgrade cmake;
         - brew install rocksdb;
+        - util/build_prep/build_qt.sh
       install:
         - pip install --user awscli
         - brew install ccache;
         - export PATH="$HOME/Library/Python/2.7/bin:/usr/local/opt/ccache/libexec:$PATH";
         - aws --version
-        - util/build_prep/build_qt.sh
       script:
         - ci/build-deploy.sh "/tmp/qt/lib/cmake/Qt5"; 
         - ci/deploy-travis.sh;
@@ -188,7 +189,7 @@ cache:
 script:
   - if [ -n "$ONE_TIME_TESTS" ]; then ci/check-commit-format.sh; fi
   - if [ -n "$ONE_TIME_TESTS" ]; then doxygen doxygen.config; fi # TODO also deploy the built HTML
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then RELEASE=${RELEASE} ci/build-travis.sh "/usr/local/opt/qt5/lib/cmake/Qt5"; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then RELEASE=${RELEASE} ci/build-travis.sh "/tmp/qt/lib/cmake/Qt5"; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then docker run -v $TRAVIS_BUILD_DIR:/workspace -v $HOME/.ccache:/ccache nanocurrency/nano-env:$TRAVIS_COMPILER /bin/bash -c "apt install ccache; cd /workspace && RELEASE=${RELEASE} ASAN=${ASAN} TSAN=${TSAN} CCACHE_DIR=/ccache ./ci/build-travis.sh /usr/lib/x86_64-linux-gnu/cmake/Qt5 ${PWD}"; fi
 env:
   global:
