cleanup cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -339,6 +339,9 @@ add_library (blake2
 
 target_compile_definitions(blake2 PRIVATE -D__SSE2__)
 
+if (NANO_POW_SERVER)
+	add_subdirectory(nano-pow-server)
+endif ()
 add_subdirectory(nano/crypto_lib)
 add_subdirectory(nano/secure)
 add_subdirectory(nano/lib)
@@ -347,9 +350,6 @@ add_subdirectory(nano/nano_node)
 add_subdirectory(nano/rpc)
 add_subdirectory(nano/nano_rpc)
 
-if (NANO_POW_SERVER)
-	add_subdirectory(nano-pow-server)
-endif ()
 
 if (NANO_TEST OR RAIBLOCKS_TEST)
 	if(WIN32)
@@ -377,7 +377,6 @@ if (NANO_TEST OR RAIBLOCKS_TEST)
 	add_subdirectory(nano/rpc_test)
 	add_subdirectory(nano/slow_test)
 endif ()
-
 if (NANO_GUI OR RAIBLOCKS_GUI)
 	install (FILES ${PROJECT_BINARY_DIR}/config-node.toml.sample DESTINATION .)
 	install (FILES ${PROJECT_BINARY_DIR}/config-rpc.toml.sample DESTINATION .)
@@ -479,7 +478,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 		install (DIRECTORY ${Qt5_DIR}/../../QtWidgets.framework DESTINATION Nano.app/Contents/Frameworks)
 		install (FILES "${Qt5_DIR}/../../../plugins/platforms/libqcocoa.dylib" DESTINATION Nano.app/Contents/PlugIns/platforms)
 		if (NANO_POW_SERVER)
-			install (PROGRAMS ${PROJECT_BINARY_DIR}/nano_pow_server DESTINATION Nano.app/Contents/MacOS)
+			install (targets nano_pow_server DESTINATION Nano.app/Contents/MacOS)
 			install (DIRECTORY ${PROJECT_SOURCE_DIR}/nano-pow-server/public DESTINATION Nano.app/Contents/MacOS)
 		endif()
 		install (FILES Nano.icns DESTINATION Nano.app/Contents/Resources)
@@ -507,7 +506,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 		install (TARGETS nano_wallet DESTINATION .)
 		install (TARGETS nano_wallet_com DESTINATION .)
 		if (NANO_POW_SERVER)
-			install (PROGRAMS ${PROJECT_BINARY_DIR}/nano_pow_server DESTINATION .)
+			install (TARGETS nano_pow_server DESTINATION .)
 			install (DIRECTORY ${PROJECT_SOURCE_DIR}/nano-pow-server/public DESTINATION .)
 		endif ()
 		install (FILES ${CMAKE_CURRENT_BINARY_DIR}/${WIN_REDIST} DESTINATION .)
@@ -523,12 +522,11 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 				RUNTIME DESTINATION .
 		)
 		if (NANO_POW_SERVER)
-			install (PROGRAMS ${PROJECT_BINARY_DIR}/nano_pow_server DESTINATION .)
+			install (TARGETS nano_pow_server DESTINATION .)
 			install (DIRECTORY ${PROJECT_SOURCE_DIR}/nano-pow-server/public DESTINATION .)
 		endif ()
 	endif ()
 endif ()
 
 set (CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE)
-
 include (CPack)
