casing matters with targets :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -478,7 +478,7 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 		install (DIRECTORY ${Qt5_DIR}/../../QtWidgets.framework DESTINATION Nano.app/Contents/Frameworks)
 		install (FILES "${Qt5_DIR}/../../../plugins/platforms/libqcocoa.dylib" DESTINATION Nano.app/Contents/PlugIns/platforms)
 		if (NANO_POW_SERVER)
-			install (targets nano_pow_server DESTINATION Nano.app/Contents/MacOS)
+			install (TARGETS nano_pow_server DESTINATION Nano.app/Contents/MacOS)
 			install (DIRECTORY ${PROJECT_SOURCE_DIR}/nano-pow-server/public DESTINATION Nano.app/Contents/MacOS)
 		endif()
 		install (FILES Nano.icns DESTINATION Nano.app/Contents/Resources)
