--- a/docker/ci/Dockerfile-base
+++ b/docker/ci/Dockerfile-base
@@ -4,10 +4,13 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -qq && apt-get install -yqq \
     build-essential \
-    cmake \
     g++ \
     wget \
     python
+
+RUN wget -O cmake_install.sh https://github.com/Kitware/CMake/releases/download/v3.15.4/cmake-3.15.4-Linux-x86_64.sh && \
+	chmod +x cmake_install.sh && \
+	./cmake_install.sh --prefix=/usr --exclude-subdir --skip-license
 
 RUN apt-get update -qq && apt-get install -yqq \
     qt5-default \
